--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,28 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  ~ Copyright (C) 2015 The Android Open Source Project
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~      http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
--->
-
 <resources>
     <string name="app_name">Android Historian</string>
 
-  <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
-    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
-    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
-    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
-    the big cheese.</string>
+    <string name="ipsum_short">Android rocks!</string>
+    <string name="ipsum_med">Android has 80% of global market-share</string>
+    <string name="ipsum_long">Open-source software is changing the world.  Android is making great things possible.</string>
+
     <string name="checkin">Checkin</string>
     <string name="menu_settings">Settings</string>
     <string name="favorites_content">Is there an Android you particularly loved? Save it to your favorites and it will appear in a special list, which is pretty cool, huh?!</string>
@@ -50,13 +33,6 @@
     <string name="profile_snackbar">Your profile has been saved</string>
     <string name="dialog_photo_text">At some point, you will be able to enter a picture for your profile</string>
     <string name="dialog_photo_switch">Excited?</string>
-    <string name="user_info">User Info</string>
-    <string name="ever_owned">Have you ever owned any of these?</string>
-    <string name="nexus">Nexus</string>
-    <string name="android_tv">Android TV</string>
-    <string name="android_wear">Android Wear</string>
-    <string name="preferences">Preferences</string>
-    <string name="android_historian">Android Historian</string>
 
     <string-array name="country_arrays">
         <item>Malaysia</item>
