--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,8 @@
     <string name="app_name">Android Historian</string>
 
     <string name="ipsum_short">Android rocks!</string>
-    <string name="ipsum_med">Android has 80% of global market-share</string>
-    <string name="ipsum_long">Open-source software is changing the world.  Android is making great things possible.</string>
+    <string name="ipsum_med">Android has 80% of global market-share and continues to grow</string>
+    <string name="ipsum_long">Open-source software is changing the world.  Android is making great things possible all over the universe</string>
 
     <string name="checkin">Checkin</string>
     <string name="menu_settings">Settings</string>
@@ -33,6 +33,7 @@
     <string name="profile_snackbar">Your profile has been saved</string>
     <string name="dialog_photo_text">At some point, you will be able to enter a picture for your profile</string>
     <string name="dialog_photo_switch">SwitchCompat Is Pretty</string>
+    <string name="android_supports_vectors">Isn\'t it cool that Android supports Vector Graphics!!!</string>
 
     <string-array name="country_arrays">
         <item>Malaysia</item>
