Updates to readme and gif, plus add SharedElementTransitions
Added transition from list to detail Activity
Remove CircleImageView library (is not really necessary, and takes away
from using just the supported lib’s)
Small UI cleanups, give things a bit more space

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,8 @@
     <string name="dialog_photo_switch">SwitchCompat Is Pretty</string>
     <string name="android_supports_vectors">Isn\'t it cool that Android supports Vector Graphics!!!</string>
 
+    <string name="transition_string">transitionString</string>
+
     <string-array name="country_arrays">
         <item>Malaysia</item>
         <item>United States</item>
