Add Kotlin, and UI enhancements and demos
Converted a few classes to Kotlin (more to come).

- Adjusted the different list adapters to show info correctly
- Additional adjustments and explorations of Bottom Navigation - including a -
- BottomNavView example, and adding scroll behavior to the updated detail Activity toolbar.
- Using downloadable fonts, that are styled universally throughout the app

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -180,4 +180,10 @@
         <item>New Zealand</item>
         <item>India</item>
     </string-array>
+
+    <!-- BottomNavView -->
+    <string name="title_activity_bottom_bav">BottomBavActivity</string>
+    <string name="bottomnav1">Option1</string>
+    <string name="bottomnav2">Option2</string>
+    <string name="bottomnav3">Option3</string>
 </resources>
