More Kotlin Migrations, and Color adjustments
- Changed color theme of app to get rid of Yellow accent (and also find a more unique and pleasing color Palette).

- More Kotlin conversions (super close to being 100% K - yeah!)

- Adjusted adaptive icon to match newer color theme

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -197,4 +197,5 @@
     <string name="spec_video">Video</string>
     <string name="spec_display">Display</string>
     <string name="spec_resolution">Resolution</string>
+    <string name="device_info">Device Info</string>
 </resources>
