--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -215,8 +215,18 @@
     <string name="spec_resolution">Resolution</string>
     <string name="device_info">Device Info</string>
 
+
+    <!-- Detail Info -->
+    <string name="percent_40">40%</string>
+    <string name="percent_20">20%</string>
+    <string name="percent_60">60%</string>
+    <string name="primary_colors_desc">This will display the primary colors of the current image</string>
+    <string name="percentage">Percentage</string>
+    <string name="guideline_explain">This shows how to use Guidelines, instead of the deprecated Percentage layout</string>
+
     <!-- Lost and Found -->
     <string name="title_activity_motion_layout">MotionLayoutActivity</string>
+
 
 
 </resources>
