Add version info to Navigation Header
Displays the Version info in the header, and also changes the package name to match the Play Store package.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -279,6 +279,7 @@
     <string name="bottomnavview">BottomNavView</string>
     <string name="motionlayout">MotionLayout</string>
     <string name="search">Search</string>
+    <string name="os_and_device_historian">OS and Device Historian</string>
 
     <!-- Lost and Found -->
 
