Notifications (showing WorkManager), and a branded splash screen
- Add a splash screen when the app launches
- WorkManager example using Periodic scheduled action to send a notification at every 15 minutes (shortest interval possible)
- Displaying Version info inside the App

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Android Historian</string>
+    <string name="app_name">Historian</string>
 
     <string name="ipsum_short">Android rocks!</string>
     <string name="ipsum_med">Android has 80% of global market-share and continues to grow</string>
