Changes to prep for Dark Mode
Remove unused resources, and convert remaining PNGs to vector

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -288,6 +288,7 @@
     <string name="stop_notifications">Stop Notifications</string>
     <string name="play_store_beta">Play Store Beta</string>
     <string name="mikewolfson_com">AbleAndroid.com</string>
+    <string name="source_code">Source Code (Open)</string>
     <string name="help">Help</string>
 
     <!-- Lost and Found -->
