--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
     <string name="os_version">OS Version</string>
     <string name="devices">Device</string>
     <string name="favorites">Favorites</string>
+    <string name="header_version">Version: %1$s (%2$d)</string>
 
     <!-- Scale Text Labels-->
     <string name="letter_spacing">Letter Spacing</string>
